# imandra-goals

./: README.md  dune-project  imandra-goals-alcotest.opam  imandra-goals.opam
src/: dune  imandra_goals.ml  imandra_goals.mli
src-alcotest/: dune  imandra_goals_alcotest.ml
