(library
 (name imandra_goals_alcotest)
 (public_name imandra-goals-alcotest)
 (libraries alcotest containers imandra-goals imandra-base.interactive imandra-surface)
 (modes byte)
 (flags
  (:standard -w +a-4-29-42-44-48-50-58-32-60@8 -safe-string
    -open Imandra_interactive -open Imandra_surface)))
